Roughing components and pages out

--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -1,16 +1,15 @@
 ---
-import '../styles/global.css';
-import Layout from './../layouts/Layout.astro';
+import Layout from '../../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<h1><span>Nichole Koelzer</span>is a UX Front-End Engineer specializing in accessible, performant, and delightful user experiences.</h1>
+	<h1>Writing</h1>
+
 	<nav>
-		<a href="">Email</a>
-		<a href="">Codepen</a>
-		<a href="">Github</a>
+		<a href="/writing/unit-testing-a-dialog">Unit Testing the HTML Dialog Element</a>
+		<a href="/writing/temp">Pages to Add - Temp</a>
 	</nav>
 </Layout>
