--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Footer from './Footer.astro'
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +9,17 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Nichole Koelzer | UX Frontend Engineer</title>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="/">Home</a>
+				<a href="/about/">About</a>
+				<a href="/writing/">Writing</a>
+			</nav>
+		</header>
 		<slot />
+		<Footer />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
